--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@popperjs/core": "^2.11.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "cloudinary": "^1.31.0",
     "cra-template": "1.1.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "noty": "^3.2.0-beta-deprecated",
     "popper.js": "^1.16.1",
@@ -30,6 +32,7 @@
     "reactstrap": "^9.0.1",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.8",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0"
   },
   "scripts": {
