--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "^5.0.0",
     "react-toastify": "^8.2.0",
     "reactstrap": "^9.0.1",
+    "stripe": "^10.8.0",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.8",
     "uuid": "^8.3.2",
