--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "cdbreact": "^1.5.3",
     "font-awesome": "^4.7.0",
     "install": "^0.13.0",
+    "js-file-download": "^0.4.12",
     "noty": "^3.2.0-beta-deprecated",
     "npm": "^8.7.0",
     "react": "^18.0.0",
